refactor test structure by reorganizing and renaming resolver tests; remove outdated test files and introduce new tests for language-specific resolvers and project context management

--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -241,22 +241,9 @@ target_link_libraries(python_example_ast_tests PRIVATE
 # set_common_test_includes(python_example_ast_tests)
 
 # Add interfile test targets
-# Symbol Table Tests
-add_executable(symbol_table_tests
-    symbol_table_tests.c
-)
-target_include_directories(symbol_table_tests PRIVATE ${CRITERION_INCLUDE_DIRS})
-target_link_libraries(symbol_table_tests PRIVATE
-    test_parser
-    test_utilities
-    parser_core
-    context_engine
-    ${CRITERION_LIBRARIES}
-)
-
 # Project Context Tests
 add_executable(project_context_tests
-    project_context_tests.c
+    project_context/project_context_tests.c
 )
 target_include_directories(project_context_tests PRIVATE ${CRITERION_INCLUDE_DIRS})
 target_link_libraries(project_context_tests PRIVATE
@@ -267,36 +254,8 @@ target_link_libraries(project_context_tests PRIVATE
     ${CRITERION_LIBRARIES}
 )
 
-# Reference Resolver Tests
-add_executable(reference_resolver_tests
-    reference_resolver_tests.c
-)
-target_include_directories(reference_resolver_tests PRIVATE ${CRITERION_INCLUDE_DIRS})
-target_link_libraries(reference_resolver_tests PRIVATE
-    test_parser
-    test_utilities
-    parser_core
-    context_engine
-    ${CRITERION_LIBRARIES}
-)
-
-# Resolver Core Tests
-add_executable(resolver_core_tests
-    resolver_core_tests.c
-)
-target_include_directories(resolver_core_tests PRIVATE ${CRITERION_INCLUDE_DIRS})
-target_link_libraries(resolver_core_tests PRIVATE
-    test_parser
-    test_utilities
-    parser_core
-    context_engine
-    ${CRITERION_LIBRARIES}
-)
-
 # Resolver Registration Tests
-add_executable(resolver_registration_tests
-    resolver_registration_tests.c
-)
+add_executable(resolver_registration_tests reference_resolvers/resolver_registration_tests.c)
 target_include_directories(resolver_registration_tests PRIVATE ${CRITERION_INCLUDE_DIRS})
 target_link_libraries(resolver_registration_tests PRIVATE
     test_parser
@@ -307,9 +266,7 @@ target_link_libraries(resolver_registration_tests PRIVATE
 )
 
 # Resolver Resolution Tests
-add_executable(resolver_resolution_tests
-    resolver_resolution_tests.c
-)
+add_executable(resolver_resolution_tests reference_resolvers/resolver_resolution_tests.c)
 target_include_directories(resolver_resolution_tests PRIVATE ${CRITERION_INCLUDE_DIRS})
 target_link_libraries(resolver_resolution_tests PRIVATE
     test_parser
@@ -321,10 +278,32 @@ target_link_libraries(resolver_resolution_tests PRIVATE
 
 # Language Resolver Tests
 add_executable(language_resolver_tests
-    language_resolver_tests.c
+    language_resolver/language_resolver_tests.c
 )
 target_include_directories(language_resolver_tests PRIVATE ${CRITERION_INCLUDE_DIRS})
 target_link_libraries(language_resolver_tests PRIVATE
+    test_parser
+    test_utilities
+    parser_core
+    context_engine
+    ${CRITERION_LIBRARIES}
+)
+
+# Resolver Core Tests
+add_executable(resolver_core_tests reference_resolvers/resolver_core_tests.c)
+target_include_directories(resolver_core_tests PRIVATE ${CRITERION_INCLUDE_DIRS})
+target_link_libraries(resolver_core_tests PRIVATE
+    test_parser
+    test_utilities
+    parser_core
+    context_engine
+    ${CRITERION_LIBRARIES}
+)
+
+# Symbol Table Tests
+add_executable(symbol_table_tests symbol_table/symbol_table_tests.c)
+target_include_directories(symbol_table_tests PRIVATE ${CRITERION_INCLUDE_DIRS})
+target_link_libraries(symbol_table_tests PRIVATE
     test_parser
     test_utilities
     parser_core
