--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ windsurf-collector/*
 ts_diagnostic
 ts_language_test
 !core/tests/**
+core/src/info_block/*
+core/include/scopemux/info_block.h
 
 
 # Python
@@ -14,14 +16,14 @@ __pycache__/
 *.py[cod]
 *.so
 .Python
-build/
+# build/
 develop-eggs/
 dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+# lib/
+# lib64/
 parts/
 sdist/
 var/
@@ -40,8 +42,8 @@ htmlcov/
 *.dll
 
 # Build directories
-build/
-bindings/build/
+# build/
+# bindings/build/
 
 # Test executables and build artifacts
 core/tests/CMakeFiles/
