consolidate reference resolvers and update enum values for reference types, add asan log outputs

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ core/src/info_block/*
 core/include/scopemux/info_block.h
 core/tests/tools/cst_dump_tool
 diff-output.txt
+#asan.log.*
 
 # These directories may interfere with coding agents
 core/tests/build*
